--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -1,10 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
   </head>
 
   <body>
@@ -12,7 +12,8 @@
     <p>{{ message }}</p>
     <table>
       <form action="../../views.py" method="post">
-        {% csrf_token %} {{ form.as_table }}
+        {% csrf_token %} 
+        {{ form.as_table }}
         <tr>
           <td></td>
           <td><input type="submit" value="送信" /></td>
