--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -16,7 +16,7 @@
         {{ form.as_table }}
         <tr>
           <td></td>
-          <td><input type="submit" value="送信" /></td>
+          <td><input type="submit" value="投稿する" /></td>
         </tr>
       </form>
     </table>
