--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_bootstrap5 %}
 <!doctype html>
 <html lang="ja">
 
@@ -8,6 +9,8 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}" />
     <script src="{% static 'javascript/sample.js' %}"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
   </head>
 
     <body>
@@ -17,6 +20,13 @@
         <div class="sp-menu">
           <span class="material-icons" id="icons">menu</span>
         </div>
+        <ul>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'login' %}">Login</a></li>
+          {% endif %}
+        </ul>
       </header>
       <main>
         <div class="header-main"></div>
