--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -22,9 +22,10 @@
         </div>
         <ul>
           {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'logout' %}">ログアウト</a></li>
           {% else %}
-            <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'login' %}">ログイン</a></li>
+            <li><a href="{% url 'signup' %}">会員登録</a></li>
           {% endif %}
         </ul>
       </header>
