とりあえずのchat

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -39,28 +39,28 @@
         <nav class="pc-nav">
           <ul>
             <li>
-              <a href="{% url 'main:chat' %}">
+              <a href="">
                 <span class="material-icons" id="home">
                   home
                 </span>
               </a>
             </li>
             <li>
-              <a href="{% url 'main:chat' %}">
+              <a href="">
                 <span class="material-icons" id="post_add">
                   post_add
                 </span>
               </a>
             </li>
             <li>
-              <a href="{% url 'main:chat' %}">
+              <a href="">
                 <span class="material-icons" id="message">
                   message
                 </span>
               </a>
             </li>
             <li>
-              <a href="{% url 'main:chat' %}">
+              <a href="">
                 <span class="material-icons" id="person">
                   person
                 </span>
