--- a/main/templates/main/chat.html
+++ b/main/templates/main/chat.html
@@ -2,5 +2,18 @@
 
 {% block mainblock %}
   <h1>チャット画面</h1>
+  {{ user }}
+  {{ id }}
+  {{ user }}
+  <form action="{% url 'main:chat' id %}" method="post">
+
+    {% csrf_token %}
+    {{ form }}
+    <tr>
+      <td></td>
+      <td><input type="submit" value="送信"></td>
+    </tr>
+  </form>
 {% endblock %}
+ 
  
