プロフィールページ、編集ページ見た目だけ作成

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="{% url 'main:profile' %}">
                 <span class="material-icons" id="person">
                   person
                 </span>
