--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -1,8 +1,7 @@
 {% extends "main/layout.html" %} 
 
 {% block mainblock %}
-  <h1>{{ title }}</h1>
-  <p>{{ message }}</p>
+  <h1>案件投稿画面</h1>
   <table>
     <form action="{% url 'main:post' %}" method="post">
       {% csrf_token %} 
