--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,6 +69,7 @@ ul {
   display: flex;
   justify-content: space-evenly;
   height: 100%;
+  width: 100%;
 }
 
 ul a {
@@ -98,7 +99,6 @@ nav {
   width: 100%;
   height: 100%;
 }
-
 /* ヘッダーとフッターのcss */
 
 /* チャットのcss */
