--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -3,37 +3,51 @@
 {% block mainblock %}
     <h1>Modelテスト</h1>
     <h2>User_info一覧</h2>
+    {{user}}
+    {{user.id}}
     {% if all_user_info %}
-    <p>
-            <a href="{% url 'main:user_edit' %}">
-                プロフィール編集
-            </a>
-        </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>user_name</th>
-                <th>is_driver</th>
-                <th>region</th>
-                <th>total_socore</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for i in all_user_info %}
+        <table class="table">
+            <thead>
                 <tr>
-                    <th>{{i.user_name}}</th>
-                    <th>{{i.is_driver}}</th>
-                    <th>{{i.region}}</th>
-                    <th>{{i.total_socore}}</th>
+                    <th>user_name</th>
+                    <th>is_driver</th>
+                    <th>region</th>
+                    <th>total_socore</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for i in all_user_info %}
+                        <tr>
+                            <th>{{i.user_name}}</th>
+                            <th>{{i.is_driver}}</th>
+                            <th>{{i.region}}</th>
+                            <th>{{i.total_socore}}</th>
+                        </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% else %}
-        <p>
-            <a href="{% url 'main:user_edit' %}">
-                User_infoは空だヨ
-            </a>
-        </p>
+        <h2>ユーザー情報編集</h2>
+         <table class="table">
+            <thead>
+                <tr>
+                    <th>user_name</th>
+                    <th>is_driver</th>
+                    <th>region</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <tr>
+                        <th>{{user}}</th>
+                        <th><input type="checkbox" value="" name="is_driver"></th>
+                        <th><input type="text" value="" name="region"></th>
+                        <th><button type="submit" name="saving">保存</button></th>
+                    </tr>
+                </form>
+            </tbody>
+        </table>
     {% endif %}
 {% endblock %}
