--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,23 +3,23 @@ body {
   margin: 0;
   padding: 0;
   color: #1a1a1a;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   background: #f6f5f4;
 }
 
 header {
   width: 100%;
   background: #d3d3d3;
-  display: flex; 
-  align-items: center; 
-  justify-content: space-between; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding-left: 30px;
   padding-right: 30px;
   position: fixed;
-  top: 0px;                  
-  left: 0px;                
-  width: 100%;             
-  height: 200px;   
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 200px;
   box-sizing: border-box;
 }
 
@@ -41,7 +41,11 @@ header {
   width: 100%;
 }
 
-#icons,  #post_add, #home, #message, #person{
+#icons,
+#post_add,
+#home,
+#message,
+#person {
   font-size: 100px;
 }
 
@@ -51,16 +55,16 @@ header {
 
 footer {
   background: #d3d3d3;
-  display: flex; 
-  align-items: center; 
-  justify-content: space-between; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding-left: 30px;
   padding-right: 30px;
-  position: fixed;           
-  bottom: 0px;               
-  left: 0px;                 
-  width: 100%;              
-  height: 200px;            
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 200px;
   box-sizing: border-box;
 }
 
@@ -105,7 +109,25 @@ nav {
 .chat_home {
   display: flex;
 }
-
-#chat_table {
-}
 /* チャットのcss */
+
+
+.payment-modal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  background-color: white;
+  width: 500px;
+  height: 70%;
+}
