✨ 決済したらホームに戻る

--- a/main/templates/main/payment.html
+++ b/main/templates/main/payment.html
@@ -4,7 +4,11 @@
 
 <div class="payment-modal" id="payment_modal">
   <div class="content">
-    <div class="modal-body"><h1>hello</h1></div>
+    <div class="modal-body">
+      <h1>決済が完了しました</h1>
+      <p>お互いの評価が完了次第、取引は終了となります。</p>
+    </div>
+    <a href="/">ホームに戻る</a>
   </div>
 </div>
 <input type="button" id="btn" value="決済" />
