--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -55,9 +55,9 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'main:message' %}">
+              <a href="{% url 'main:history' %}">
                 <span class="material-icons" id="message">
-                  message
+                  history
                 </span>
               </a>
             </li>
