💄 bgcolorと文字の色の変更

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -127,7 +127,11 @@ nav {
 }
 
 .content {
-  background-color: white;
+  /* background-color: white; */
   width: 500px;
   height: 70%;
+}
+
+.modal-body {
+  color: #d3d3d3;
 }
