--- a/main/templates/main/mypage.html
+++ b/main/templates/main/mypage.html
@@ -1,7 +1,8 @@
-{% extends "main/layout.html" %} 
+{% extends "main/layout.html" %}
 
 {% block mainblock %}
 
 <h1>マイページ</h1>
+<li><a href="{% url 'logout' %}">ログアウト</a></li>
 
 {% endblock %}
