--- a/main/templates/main/chat.html
+++ b/main/templates/main/chat.html
@@ -3,6 +3,9 @@
 {% block mainblock %}
   <h1>チャット画面</h1>
   <!-- {{ user }} -->
+  <a href="{% url 'main:request_complete' id %}">
+    <button>取引を完了する</button>
+  </a>
   <form action="{% url 'main:chat' id %}" method="post">
     <div class="chat_form">
       {% csrf_token %}
