--- a/main/templates/main/match_complete.html
+++ b/main/templates/main/match_complete.html
@@ -18,7 +18,7 @@
       <th>{{ col }}</th>
       {% endfor %}
     </tr>
-    {% for post in posts %}
+    {% for post in posts reversed %}
     <tr>
       <td>{{ post.client_id }}</td>
       <td>{{ post.title }}</td>
@@ -26,6 +26,7 @@
       <td>{{ post.destination_place }}</td>
       <td>{{ post.delivery_date }}</td>
       <td>{{ post.text }}</td>
+      <td><a href="{% url 'main:detail' post.id %}">詳細画面</a></td>
     </tr>
     {% endfor %}
   </table>
