--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -21,6 +21,7 @@
         <ul>
           {% if user.is_authenticated %}
             <li><a href="">share</a></li>
+            <li><a href="{% url 'logout' %}">ログアウト</a></li>
           {% else %}
             <li><a href="{% url 'login' %}">ログイン</a></li>
             <li><a href="{% url 'signup' %}">会員登録</a></li>
