--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -54,7 +54,7 @@
         <h3 class="title">{{ post.title }}</h3>
         <div class="box">
           <p>{{ post.text }}</p>
-          <span><a href="{% url 'main:chat' post.id %}">チャットする</a><span/>
+          <span><a href="{% url 'main:detail' post.id %}">詳細を見る</a><span/>
         </div>
       </section>
     </li>
