--- a/main/templates/main/payment.html
+++ b/main/templates/main/payment.html
@@ -2,13 +2,13 @@
 
 <h1>決済画面</h1>
 
-<div class="payment-modal" id="payment_modal">
+<div class="payment-modal" id="modal2">
   <div class="content">
     <div class="modal-body">
       <h1>決済が完了しました</h1>
       <p>お互いの評価が完了次第、取引は終了となります。</p>
     </div>
-    <a href="/">ホームに戻る</a>
+    <a href="/"><button>ホームに戻る</button></a>
   </div>
 </div>
 <input type="button" id="btn" value="決済" />
