--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
   color: gray;
 }
 
@@ -15,4 +15,4 @@ table th, table td {
 
 table tr:nth-child(even) {
   background-color: #87CEFA
-}
+} */
