--- a/main/templates/main/payment.html
+++ b/main/templates/main/payment.html
@@ -1,15 +1,22 @@
-{% extends "main/layout.html" %} {% block mainblock %}
+{% extends "main/layout.html" %} 
 
-<h1>決済画面</h1>
+{% block mainblock %}
 
-<div class="payment-modal" id="modal2">
+<!-- divタグの中に入れると画面に表示されなかったので一旦外しました
+すみません -->
+<!-- <div class="payment-modal" id="modal2">
   <div class="content">
     <div class="modal-body">
-      <h1>決済が完了しました</h1>
-      <p>お互いの評価が完了次第、取引は終了となります。</p>
     </div>
-    <a href="/"><button>ホームに戻る</button></a>
   </div>
-</div>
-<input type="button" id="btn" value="決済" />
+</div> -->
+<form action="{% url 'main:payment' id %}" method="post">
+  <h1>決済が完了しました</h1>
+  <h2>{{ price.asking_price }}円</h2>
+  <p>お互いの評価が完了次第、取引は終了となります。</p>
+  {% csrf_token %}
+  {{ form }}
+  <input type="submit" value="チャットに戻る">
+
+</form>
 {% endblock %}
