評価画面作成

--- a/main/templates/main/request_complete.html
+++ b/main/templates/main/request_complete.html
@@ -6,6 +6,6 @@
   <p>この案件とのマッチングを終了する場合は、チェックを入れてください</p>
   {% csrf_token %}
   {{ form }}
-  <input type="submit" value="マッチング終了">
+  <input type="submit" value="マッチングを終了して評価する">
 </form>
 {% endblock %}
