--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,11 +1,10 @@
 {% extends "main/layout.html" %} 
+{% load django_bootstrap5 %}
 
 {% block mainblock %}
-    <h1>Modelテスト</h1>
-    <h2>User_info一覧</h2>
-    {{user}}
-    {{user.id}}
+    <p>アカウント名：{{user}}　会員番号：{{user.id}}</p>
     {% if all_user_info %}
+        <h1>ユーザー情報</h1>
         <table class="table">
             <thead>
                 <tr>
@@ -28,27 +27,12 @@
         </table>
     {% else %}
         <h2>ユーザー情報編集</h2>
-         <table class="table">
-            <thead>
-                <tr>
-                    <th>user_name</th>
-                    <th>is_driver</th>
-                    <th>region</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <form action="{% url 'main:profile' %}" method="post">
-                    {% csrf_token %}
-                    {{ form.as_table }}
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th><button type="submit" name="saving">保存</button></th>
-                    </tr>
-                </form>
-            </tbody>
-        </table>
+            <form action="{% url 'main:profile' %}" method="post">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                {% bootstrap_button button_type="submit" content="登録" %}
+                <!--{{ form.as_table }}-->
+                <!--<button type="submit" name="saving">保存</button> -->
+            </form>
     {% endif %}
 {% endblock %}
