主にタブメニューの追加

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -49,8 +49,8 @@
             </a>
           </li>
           <li>
-            <a href="{% url 'main:history' %}">
-              <span class="material-icons" id="message"> history </span>
+            <a href="{% url 'main:log' %}">
+              <span class="material-icons" id="history"> history </span>
             </a>
           </li>
           <li>
