--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,8 @@
+a{
+  color:#333;
+  text-decoration: none;
+}
+
 /* ヘッダーとフッターのcss */
 body {
   margin: 0;
@@ -44,7 +49,7 @@ header {
 #icons,
 #post_add,
 #home,
-#message,
+#history,
 #person {
   font-size: 100px;
 }
@@ -211,3 +216,59 @@ transform: rotate(-45deg);
 
 /* チャットのcss */
 /* チャットのcss */
+
+
+/* log.htmlのcssここから */
+
+/*tabの形*/
+.tab{
+  display: flex;
+  padding-left: 2px;
+}
+.tab li {
+  text-align: center;
+  line-height: 50px;
+  margin-right: 2px;
+}
+.tab li a{
+  display: block;
+  background:#ddd;
+  margin:0 2px;
+  padding:10px 20px;
+  font-size: 1.75rem;
+}
+
+/*liにactiveクラスがついた時の形*/
+.tab li.active a{
+  background:#fff;
+}
+
+/*エリアの表示非表示と形*/
+.area {
+	display: none;/*はじめは非表示*/
+	opacity: 0;/*透過0*/
+	background: #fff;
+	padding:50px 20px;
+}
+.area td{
+  border-bottom: 1px solid #ddd;
+}
+
+/*areaにis-activeというクラスがついた時の形*/
+.area.is-active {
+    display: block;/*表示*/
+    animation-name: displayAnime;/*ふわって表示させるためのアニメーション*/
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes displayAnime{
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* log.htmlのcssここまで */
