リンク変更

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li>
-            <a href="{% url 'main:mypage' %}">
+            <a href="{% url 'main:profile' %}">
               <span class="material-icons" id="person"> person </span>
             </a>
           </li>
