投稿ページデザイン(仮)

--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,4 +1,4 @@
-{% extends "main/layout.html" %} 
+{% extends "main/layout.html" %}
 
 {% block mainblock %}
   <h1>詳細画面</h1>
@@ -20,6 +20,7 @@
         <td>{{ post.departure_place }}</td>
         <td>{{ post.destination_place }}</td>
         <td>{{ post.delivery_date }}</td>
+        <td>{{ post.asking_price }}</td>
         <td>{{ post.text }}</td>
       </tr>
     </table>
