--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,7 +1,8 @@
 {% extends "main/layout.html" %}
 
 {% block mainblock %}
-  <h1>詳細画面</h1>
+  {% comment %} <h1>依頼詳細画面</h1> {% endcomment %}
+
   <form action="{% url 'main:detail' id %}" method="post">
     <p>この案件とマッチングしたい場合は、チェックを入れてください</p>
     {% csrf_token %}
@@ -31,4 +32,5 @@
       {% endif %}
       {% endfor %}
   </form>
+
 {% endblock %}
