--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,8 @@ nav {
   width: 96%;
   max-width: 900px;
   height: 100%;
-  margin:0 auto;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
