些細な変更2

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends "main/layout.html" %}
 
 {% block mainblock %}
-  {% comment %} <h1>地域の依頼一覧</h1> {% endcomment %}
+  <h1>地域の依頼一覧</h1>
 
   <ul class="accordion-area">
   {% for post in posts reversed %}
