ドライバー履歴完成

--- a/main/templates/main/log.html
+++ b/main/templates/main/log.html
@@ -10,6 +10,8 @@
         <li><a href="#all_posts">全ての投稿</a></li>
     </ul>
 
+    <!-- ユーザーが依頼者の時 -->
+    {% if login.is_driver == False %}   
     <div id="log_before" class="area">
         <table>
             <tr>
@@ -116,5 +118,109 @@
             {% endfor %}
         </table>
     </div>
+    <!-- ユーザーがドライバーの時 -->
+    {% else %}
+    <div id="log_before" class="area">
+        <table>
+            <tr>
+                {% for col in header %}
+                <th>{{ col }}</th>
+                {% endfor %}
+            </tr>
+
+            {% for post in before_posts reversed %}
+            <tr>
+                <td>{{ post.title }}</td>
+                <td>{{ post.departure_place }}</td>
+                <td>{{ post.destination_place }}</td>
+                <td>{{ post.delivery_date }}</td>
+                <td>{{ post.text }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div id="log_matching" class="area">
+        <table>
+            <tr>
+                {% for col in header %}
+                <th>{{ col }}</th>
+                {% endfor %}
+            </tr>
+
+            {% for post in matching_posts reversed %}
+            <tr>
+                <td>{{ post.title }}</td>
+                <td>{{ post.departure_place }}</td>
+                <td>{{ post.destination_place }}</td>
+                <td>{{ post.delivery_date }}</td>
+                <td>{{ post.text }}</td>
+                <td><a href="{% url 'main:chat' post.id %}">チャットルーム</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div id="log_after" class="area">
+        <table>
+            <tr>
+                {% for col in header %}
+                <th>{{ col }}</th>
+                {% endfor %}
+            </tr>
+
+            {% for post in after_posts reversed %}
+            <tr>
+                <td>{{ post.title }}</td>
+                <td>{{ post.departure_place }}</td>
+                <td>{{ post.destination_place }}</td>
+                <td>{{ post.delivery_date }}</td>
+                <td>{{ post.text }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div id="favorites" class="area">
+        <table>
+            <tr>
+                {% for col in header %}
+                <th>{{ col }}</th>
+                {% endfor %}
+            </tr>
+
+            {% for post in favorite_posts reversed %}
+            <tr>
+                <td>{{ post.title }}</td>
+                <td>{{ post.departure_place }}</td>
+                <td>{{ post.destination_place }}</td>
+                <td>{{ post.delivery_date }}</td>
+                <td>{{ post.text }}</td>
+                <td><a href="{% url 'main:detail' post.id %}">詳細画面</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div id="all_posts" class="area">
+        <table>
+            <tr>
+                {% for col in header %}
+                <th>{{ col }}</th>
+                {% endfor %}
+            </tr>
+
+            {% for post in all_posts reversed %}
+            <tr>
+                <td>{{ post.title }}</td>
+                <td>{{ post.departure_place }}</td>
+                <td>{{ post.destination_place }}</td>
+                <td>{{ post.delivery_date }}</td>
+                <td>{{ post.text }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    {% endif %}
 
 {% endblock %}
