--- a/main/templates/main/update.html
+++ b/main/templates/main/update.html
@@ -1,5 +1,15 @@
 {% extends "main/layout.html" %}
 
 {% block mainblock %}
-<h1>編集画面</h1>
+  <h1>編集画面</h1>
+  <table>
+    <form action="{% url 'main:update' id %}" method="post">
+      {% csrf_token %}
+      {{ form.as_table }}
+      <tr>
+        <td></td>
+        <td><input type="submit" value="更新"></td>
+      </tr>
+    </form>
+  </table>
 {% endblock %}
