編集機能完成

--- a/main/templates/main/log.html
+++ b/main/templates/main/log.html
@@ -155,6 +155,20 @@
                 <td>{{ post.destination_place }}</td>
                 <td>{{ post.delivery_date }}</td>
                 <td>{{ post.text }}</td>
+                <td>
+                    <a href="{% url 'main:update' post.id %}">
+                        <button>
+                            編集
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'main:delete' post.id %}">
+                        <button>
+                            削除
+                        </button>
+                    </a>
+                </td>
             </tr>
             {% endfor %}
         </table>
@@ -175,7 +189,7 @@
                 <td>{{ post.destination_place }}</td>
                 <td>{{ post.delivery_date }}</td>
                 <td>{{ post.text }}</td>
-                <td><a href="{% url 'main:chat' post.id %}">チャットルーム</a></td>
+                
             </tr>
             {% endfor %}
         </table>
